<resources>
    <string name="app_name">Nagham Alquran</string>
    <string name="title_home">Prediction</string>
    <string name="title_detail">Tausyih</string>
    <string name="title_vip">Tilawah</string>
    <string name="txt_click_me">Click me</string>
    <string name="txt_hearing">Mendengarkan...</string>
    <string name="txt_tipe_nagham">Tipe Nagham</string>
    <string name="txt_deskripsi_singkat">Deskripsi singkat</string>
    <string name="arab">نُوْرُ النَّبِيّ عَلىَ الْعَوَالِمِ اَسْفَارَا</string>
    <string name="btn_play">Play</string>
    <string name="btn_resume">Resume</string>
    <string name="btn_pause">Pause</string>
    <string name="txt_save">Save</string>
    <string name="txt_upload_audio">Upload Audio</string>
    <string-array name="Nagham_Type">
        
        <item>Tausyih Bayati</item>
        <item>Bayati Ashli Qorror</item>
        <item>Bayati Ashli Nawa</item>
        <item>Bayati Syuri</item>
        <item>Bayati Husaini</item>
        <item>Bayati Ashli Jawab</item>

        
        <item>Tausyih Shaba</item>
        <item>Shaba Ashli</item>
        <item>Jawab Shaba</item>
        <item>Jawab Shaba Maalajam</item>
        <item>Shaba Ashli 2</item>
        <item>Jawab Shaba Maalbastanjar</item>

        
        <item>Tausyih Hijaz</item>
        <item>Hijaz Ashli</item>
        <item>Hijaz Kar</item>
        <item>Hijaz Karkur</item>
        <item>Hijaz Kur</item>

        
        <item>Tausyih Rast</item>
        <item>Rast Ashli</item>
        <item>Rast Alanawa</item>

        
        <item>Tausyih Sika</item>
        <item>Sika Ashli</item>
        <item>Sika Turki</item>
        <item>Sika Mishri</item>

        
        <item>Tausyih Jiharkah</item>
        <item>Jiharkah Ashli</item>
        <item>Jiharkah Jawab</item>
        <item>Jiharkah Ashli 2</item>
        <item>Jiharkah Jawab 2</item>

        
        <item>Tausyih Nahawand</item>
        <item>Nahawand Ashli</item>
        <item>Nahawand Jawab</item>

    </string-array>
    <string-array name="Short_Description">
        
        <item>Bayati</item>
        <item>Bayati</item>
        <item>Bayati</item>
        <item>Bayati</item>
        <item>Bayati</item>
        <item>Bayati</item>

        
        <item>Shaba</item>
        <item>Shaba</item>
        <item>Shaba</item>
        <item>Shaba</item>
        <item>Shaba</item>
        <item>Shaba</item>

        
        <item>Hiaz</item>
        <item>Hiaz</item>
        <item>Hiaz</item>
        <item>Hiaz</item>
        <item>Hiaz</item>

        
        <item>Rast</item>
        <item>Rast</item>
        <item>Rast</item>

        
        <item>Sika</item>
        <item>Sika</item>
        <item>Sika</item>
        <item>Sika</item>

        
        <item>Jiharkah</item>
        <item>Jiharkah</item>
        <item>Jiharkah</item>
        <item>Jiharkah</item>
        <item>Jiharkah</item>

        
        <item>Nahawand</item>
        <item>Nahawand</item>
        <item>Nahawand</item>

    </string-array>
    <string-array name="Long_Descrtion">
        
        <item>نُوْرُ النَّبِيّ عَلىَ الْعَوَالِمِ اَسْفَارَا *\n فَاَبَانَ اَسْبَابَ الرَّشَادِ وَاَظْهَارَا وَشَرِيْعَةُ الْاِسْلَامِ رَاقَ رُوَاعُهَا *\n وَالْكُفْرُاَصْبَحَ جَيْشُهُ مُتَقَهْقِرَا لَمَّااَتٰى خَيْرُ الْاَنَامِ بِدِيْنِهِ *\n وَنْحَلَّ مَا عَقَدَالْغُوَاةَ مِنَ الْعُرٰى هَامُوْاجَمِيْعًا بِالنَّبِىِّ وَدِيْنِهِ *\n وَالْكُفْرُ بَعْدَ الْعُرْفِ صَارَ مُنَكَّرَا وَاسْتَبْشَرُوْا بِالْمُصْطَفٰى وَبِنُوْرِهِ *\n وَالْكُلُّ صَاحَ مُهَلِّلًا وَمُكَبِّرَا</item>
        <item>نُوْرُ النَّبِيّ عَلىَ الْعَوَالِمِ اَسْفَارَا</item>
        <item>فَاَبَانَ اَسْبَابَ الرَّشَادِ وَاَظْهَارَا</item>
        <item>وَشَرِيْعَةُ الْاِسْلَامِ رَاقَ رُوَاعُهَا *\n وَالْكُفْرُاَصْبَحَ جَيْشُهُ مُتَقَهْقِرَا</item>
        <item>لَمَّااَتٰى خَيْرُ الْاَنَامِ بِدِيْنِهِ *\n وَنْحَلَّ مَا عَقَدَالْغُوَاةَ مِنَ الْعُرٰى هَامُوْاجَمِيْعًا بِالنَّبِىِّ وَدِيْنِهِ *\n وَالْكُفْرُ بَعْدَ الْعُرْفِ صَارَ مُنَكَّرَا وَاسْتَبْشَرُوْا بِالْمُصْطَفٰى وَبِنُوْرِهِ</item>
        <item>وَالْكُلُّ صَاحَ مُهَلِّلًا وَمُكَبِّرَا</item>

        
        <item>اَرٰى طَيْرًا عَلَى الْغُصْنِ يُنَادِى *\n اَتَتْ بُشْرٰى لِمَجْرُوْحِ الْفُؤَادِى بَدَتْ لَيْلًا فَاَضْحٰى عَاشِقُوْهَا *\n رُكُوْعًا سُجُوْدًا فِى كُلِّ وَادِى</item>
        <item>اَرٰى طَيْرًا عَلَى الْغُصْنِ يُنَادِى</item>
        <item>اَتَتْ بُشْرٰى لِمَجْرُوْحِ الْفُؤَادِى</item>
        <item>اَتَتْ بُشْرٰى لِمَجْرُوْحِ الْفُؤَادِى</item>
        <item>بَدَتْ لَيْلًا فَاَضْحٰى عَاشِقُوْهَا</item>
        <item>رُكُوْعًا سُجُوْدًا فِى كُلِّ وَادِى</item>

        
        <item>يَاوَرْدَةً وَسْطَ الرِّيَاضِ مُطِلَّةً *\n تُزْرِىْ بِوَجْهِ ذَاتِ خَضْرٍ عَاطِرَا اَللّٰهُ زَادَ مُحَمَّدًا تَعْظِيْمًا *\n وَهَبَاهُ فَضْلاً مِنْ لَدُنْهُ عَمِيْمًا صَلُّوْا عَلَيْهِ وَسَلِّمُوا تَسْلِيْمًا *\n صَلُّوْا عَلَيْهِ وَسَلِّمُوا تَسْلِيْمًا يَا مَنْ سَمَا السَّبْعَ اطِّبَاقَ مِنَ الْعُلَا *\n وَدَنَا وَكَلَّمَ رَبَّهُ وَتَشَرَّفَ َاَنْتَ الَّذِىْ وَطِئَ الْبِسَاطَ بِنَعْلِهِ *\n وَبِخَلْعِهِ فِى الطُّوْرِ مُوْسٰى كُلِّفَا</item>
        <item>يَاوَرْدَةً وَسْطَ الرِّيَاضِ مُطِلَّةً *\n تُزْرِىْ بِوَجْهِ ذَاتِ خَضْرٍ عَاطِرَا اَللّٰهُ زَادَ مُحَمَّدًا تَعْظِيْمًا *\n وَهَبَاهُ فَضْلاً مِنْ لَدُنْهُ عَمِيْمًا صَلُّوْا عَلَيْهِ وَسَلِّمُوا تَسْلِيْمًا *\n صَلُّوْا عَلَيْهِ وَسَلِّمُوا تَسْلِيْمًا</item>
        <item>يَا مَنْ سَمَا السَّبْعَ اطِّبَاقَ مِنَ الْعُلَا</item>
        <item>وَدَنَا وَكَلَّمَ رَبَّهُ وَتَشَرَّفَ</item>
        <item>اَنْتَ الَّذِىْ وَطِئَ الْبِسَاطَ بِنَعْلِهِ *\n وَبِخَلْعِهِ فِى الطُّوْرِ مُوْسٰى كُلِّفَا</item>

        
        <item>َيَاسَيِّدَ الْكَوْنَيْنَ يَا عَلَمَ الْهُدٰى *\n يَا بَدْرَتِمٍّ فِى الْوُجُوْدِ عَلَى الْمَدَى َيَا كَوْكَبًا فَوْقَ الْبُدُوْرِ بِحُسْنِهِ *\n يَا مُرْسَلًا بِالْحَقِّ دَوْمًا سَرْمَدَا</item>
        <item>َيَاسَيِّدَ الْكَوْنَيْنَ يَا عَلَمَ الْهُدٰى *\n يَا بَدْرَتِمٍّ فِى الْوُجُوْدِ عَلَى الْمَدَى</item>
        <item>َيَا كَوْكَبًا فَوْقَ الْبُدُوْرِ بِحُسْنِهِ *\n يَا مُرْسَلًا بِالْحَقِّ دَوْمًا سَرْمَدَا</item>

        
        <item>يَا مَنْ يُرَجَّى فِى الْقِيَا مَةِ حَيْثُ لَا *\n اُمٌ تُرَجَّى فِى النَّجَاةِ وَلَٓااَبُ</item>
        <item>يَا مَنْ يُرَجَّى فِى الْقِيَا مَةِ حَيْثُ لَا *\n اُمٌ تُرَجَّى فِى النَّجَاةِ وَلَٓااَبُ</item>
        <item>يَا مَنْ يُرَجَّى فِى الْقِيَا مَةِ حَيْثُ لَا</item>
        <item>اُمٌ تُرَجَّى فِى النَّجَاةِ وَلَٓااَبُ</item>

        
        <item>اَللّٰهُ زَادَ مُحَمَّدًا تَعْظِيْمًا *\n وَهَبَاهُ فَضْلًا مِنْ لَدُنْهُ عَمِيْمًا وَاخْتَصَّهُ فِى الْمُرْسَلِيْنَ كَلِيْمًا *\n ذَارَأْفَةٍ بِالْمُؤْمِنِيْنَ رَحِيْمًا</item>
        <item>اَللّٰهُ زَادَ مُحَمَّدًا تَعْظِيْمًا</item>
        <item>وَهَبَاهُ فَضْلًا مِنْ لَدُنْهُ عَمِيْمًا</item>
        <item>وَاخْتَصَّهُ فِى الْمُرْسَلِيْنَ كَلِيْمًا</item>
        <item>وَاخْتَصَّهُ فِى الْمُرْسَلِيْنَ كَلِيْمًا *\n ذَارَأْفَةٍ بِالْمُؤْمِنِيْنَ رَحِيْمًا</item>

        
        <item>اِلٰى كَمْ ذَا التَّجَٰالِّى وَذَاالتَّجَانِّى *\n اِمَّا يَكْفِيْكَ يَا غُصْنَ التَّسَٰانِّى</item>
        <item>اِلٰى كَمْ ذَا التَّجَٰالِّى وَذَاالتَّجَانِّى *\n اِمَّا يَكْفِيْكَ يَا غُصْنَ التَّسَٰانِّى</item>
        <item>اِلٰى كَمْ ذَا التَّجَٰالِّى وَذَاالتَّجَانِّى *\n اِمَّا يَكْفِيْكَ يَا غُصْنَ التَّسَٰانِّى</item>

    </string-array>
    <string-array name="Nagham_Type_vip">
        
        <item>Ar-Rahman Bayati (1-13)</item>
        <item>Ar-Rahman Bayati Ashli Qorror</item>
        <item>Ar-Rahman Bayati Ashli Nawa</item>
        <item>Ar-Rahman Bayati Syuri</item>
        <item>Ar-Rahman Bayati Husaini</item>
        <item>Ar-Rahman Bayati Ashli Jawab</item>
        <item>Ar-Rahman Bayati Syuri Jawabuljawab</item>

        
        <item>Ar-Rahman Shaba (14-15)</item>
        <item>Ar-Rahman Shaba Ashli</item>
        <item>Ar-Rahman Jawab Shaba</item>
        <item>Ar-Rahman Jawab Shaba Maalajam</item>
        <item>Ar-Rahman Jawab Shaba Maalbastanjar</item>

        
        <item>Ar-Rahman Hijaz (16-18)</item>
        <item>Ar-Rahman Hijaz Ashli</item>
        <item>Ar-Rahman Hijaz Kar</item>
        <item>Hijaz Karkur</item>

        
        <item>Ar-Rahman Rast (19-23)</item>
        <item>Ar-Rahman Rast Zunjiran</item>
        <item>Ar-Rahman Rast Alanawa</item>

        
        <item>Ar-Rahman Sika (24-27)</item>
        <item>Ar-Rahman Sika Ashli</item>
        <item>Ar-Rahman Sika Mishri</item>
        <item>Ar-Rahman Sika Turki</item>

        
        <item>Ar-Rahman Jiharkah (28-30)</item>
        <item>Ar-Rahman Jiharkah Ashli</item>
        <item>Ar-Rahman Jiharkah Jawab</item>

        
        <item>Ar-Rahman Nahawand (31-33)</item>
        <item>Ar-Rahman Nahawand Ashli</item>
        <item>Ar-Rahman Nahawand Jawab</item>

    </string-array>
    <string-array name="Short_Description_vip">
        
        <item>Bayati</item>
        <item>Bayati</item>
        <item>Bayati</item>
        <item>Bayati</item>
        <item>Bayati</item>
        <item>Bayati</item>
        <item>Bayati</item>

        
        <item>Shaba</item>
        <item>Shaba</item>
        <item>Shaba</item>
        <item>Shaba</item>
        <item>Shaba</item>

        
        <item>Hiaz</item>
        <item>Hiaz</item>
        <item>Hiaz</item>
        <item>Hiaz</item>

        
        <item>Rast</item>
        <item>Rast</item>
        <item>Rast</item>

        
        <item>Sika</item>
        <item>Sika</item>
        <item>Sika</item>
        <item>Sika</item>

        
        <item>Jiharkah</item>
        <item>Jiharkah</item>
        <item>Jiharkah</item>

        
        <item>Nahawand</item>
        <item>Nahawand</item>
        <item>Nahawand</item>

    </string-array>
</resources>