<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.capstone.naghamalquran.ui.prediction.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"
        />

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.capstone.naghamalquran.ui.detail.NaghamFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_detail" />

    <fragment
        android:id="@+id/navigation_vip"
        android:name="com.capstone.naghamalquran.ui.vip.VipFragment"
        android:label="@string/title_vip"
        tools:layout="@layout/fragment_vip" />
</navigation>