<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.type.NaghamDetail">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <!-- Toolbar -->

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="139dp"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="136dp"
            android:scaleType="centerCrop"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_tipe_nagham"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textColor="@color/colorClick"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="@+id/img_item_photo"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="@+id/img_item_photo"
            card_view:layout_constraintTop_toBottomOf="@+id/img_item_photo"
            tools:text="@string/txt_tipe_nagham" />


        <Button
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/btn_play"
            card_view:layout_constraintEnd_toEndOf="@+id/img_item_photo"
            card_view:layout_constraintHorizontal_bias="0.642"
            card_view:layout_constraintStart_toStartOf="@+id/img_item_photo"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_tipe_nagham" />

        <TextView
            android:id="@+id/tv_arab"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_border_background"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/colorClick"
            android:textSize="28sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"

            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/seekBar"
            card_view:layout_constraintVertical_bias="0.0"
            tools:text="@string/arab" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorClick"
            android:paddingLeft="8dp"
            android:textSize="12sp"
            card_view:layout_constraintBottom_toBottomOf="@+id/seekBar"
            card_view:layout_constraintTop_toTopOf="@+id/seekBar"
            card_view:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="16dp"
            tools:text="0:00/0:00" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            android:progressBackgroundTint="@color/colorClick"
            android:progressTint="@color/colorNavbar"
            android:thumbTint="@color/colorButton"
            card_view:layout_constraintStart_toEndOf="@+id/tv_time"
            card_view:layout_constraintTop_toBottomOf="@+id/play_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>